# Portfolio

./: .gitignore  COMMIT_SUMMARY.md  FOR_NON_ENGINEERS.md  PRODUCTION_TEMPLATE.md  README.md  TECHNICAL_GUIDE.md  portfolio_style.py  requirements.txt
.github/workflows/: deploy.yml
01_professional/: README.md
01_professional/cloud_infrastructure_support/: .gitignore  README.md  pyproject.toml
01_professional/legislative-data-pipeline/: .gitignore  README.md  pyproject.toml
01_professional/local_vs_frontier_ml/: .gitignore  README.md
01_professional/quantitative_finance/: CHANGELOG.md  README.md
01_professional/real_estate/: README.md  pyproject.toml  revival_plan.md
01_professional/subscription_economics/: README.md
01_real_estate/: README.md  house_sales_king_county_analysis.ipynb
02_cloud_infrastructure_support/: README.md
02_cloud_infrastructure_support/notebooks/: 01_descriptive_operations_health.ipynb  02_diagnostic_anomaly_detection.ipynb  03_predictive_volume_forecasting.ipynb  04_prescriptive_escalation_risk.ipynb  05_vendor_api_integration_demo.ipynb
02_intellectual/: README.md
02_intellectual/computational_physics/: README.md
02_intellectual/continental_philosophy/: README.md
02_intellectual/legislative_experiments/: build_notebook.py  legislative-experiments-standalone.html
02_intellectual/macroeconomic_capture/: README.md
02_intellectual/proteins_alphafold_distances/: README.md  pyproject.toml
02_intellectual/proteins_alphafold_distances/notebooks/: 01_AlphaFold_Spatial_Distances.ipynb
02_intellectual/proteins_alphafold_distances/src/: distances.py
02_intellectual/proteins_alphafold_distances/tests/unit/: test_distances.py
02_intellectual/proteins_ramachandran_plot/: README.md  pyproject.toml
02_intellectual/proteins_ramachandran_plot/notebooks/: 01_Ramachandran_Plot_Generator.ipynb
02_intellectual/proteins_ramachandran_plot/src/: ramachandran.py
02_intellectual/proteins_ramachandran_plot/tests/: conftest.py
02_intellectual/proteins_ramachandran_plot/tests/unit/: test_ramachandran.py
03_quantitative_finance/: README.md
04_bioinformatics/: README.md  ramachandran_plot_from_scratch.ipynb
05_macroeconomics/: README.md
_pendiente_decision/: README.md
cloud_infrastructure_support/: README.md  pyproject.toml
cloud_infrastructure_support/notebooks/: 01_descriptive_health_monitor.ipynb  (+4 more)
computational_physics/: README.md  pyproject.toml
continental_philosophy/: README.md  pyproject.toml
data/: hegel_phenomenology_corpus.txt  kojeve_initial_agents.csv  quantum_barrier_profile.csv  rutherford_initial_particles.csv  subscriptions.csv
legislative-data-pipeline/: .gitignore  .pre-commit-config.yaml  CHANGELOG_SESSION_2026-04-02.md  README.md  pyproject.toml
legislative-data-pipeline/.github/workflows/: ci.yml
legislative-data-pipeline/dashboard/: app.py
legislative-data-pipeline/dbt_project/: dbt_project.yml
legislative-data-pipeline/dbt_project/macros/: generate_surrogate_key.sql
legislative-data-pipeline/dbt_project/models/marts/: dim_legislator.sql  fact_vote.sql  schema.yml
legislative-data-pipeline/dbt_project/models/staging/: schema.yml  stg_deputies.sql  stg_vote_summaries.sql  stg_votes.sql
legislative-data-pipeline/docs/: architecture.md
legislative-data-pipeline/docs/adr/: 001-orchestrator-choice.md  002-star-schema-design.md
legislative-data-pipeline/flows/: __init__.py  legislative_pipeline.py
legislative-data-pipeline/sql/ddl/: 02_staging_schema.sql  03_dimensional_models.sql
legislative-data-pipeline/sql/queries/: analytics_transforms.sql
legislative-data-pipeline/src/capture/: __init__.py  base.py  cli.py  dipmex.py  diputados.py
legislative-data-pipeline/src/loaders/: __init__.py
legislative-data-pipeline/src/models/: __init__.py
legislative-data-pipeline/tests/: test_capture.py  test_loaders.py  test_models.py
macroeconomic_capture/: .gitignore  README.md  pyproject.toml
macroeconomic_capture/data/: README.md  corporate_zombies_synthetic.csv  macroeconomic_budget_synthetic.csv
macroeconomic_capture/notebooks/: 01_Fiscal_Crowding_Out.ipynb  02_Zombie_Corporations.ipynb
macroeconomic_capture/src/: data_generator.py
macroeconomic_capture/tests/: conftest.py
notebooks/: 01_layer1_descriptive_gso_health_monitor.ipynb  02_layer2_diagnostic_anomaly_detection.ipynb  03_layer3_predictive_ticket_forecasting.ipynb  04_layer4_prescriptive_escalation_risk.ipynb  05_nutanix_api_v4_integration.ipynb
proteins_alphafold_distances/: .gitignore  README.md  pyproject.toml
proteins_ramachandran_plot/: README.md  pyproject.toml
quantitative_finance/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
quantitative_finance/.github/: dependabot.yml
quantitative_finance/.github/workflows/: ci.yml
quantitative_finance/data/: README.md  correlated_assets_synthetic.csv  lob_events_synthetic.csv
quantitative_finance/docs/: architecture.md
quantitative_finance/docs/adr/: 002-modular-vs-flat-layout.md
quantitative_finance/notebooks/: 01_LOB_Reconstruction.ipynb  02_Exotic_Options_Heston.ipynb  03_Hierarchical_Risk_Parity.ipynb
quantitative_finance/src/: data_generator.py
quantitative_finance/src/quantitative_finance/: __init__.py  cli.py  config.py
quantitative_finance/src/quantitative_finance/data/: __init__.py  generator.py
quantitative_finance/src/quantitative_finance/utils/: __init__.py  logging.py
quantitative_finance/tests/: conftest.py
quantitative_finance/tests/unit/: test_generator.py
real_estate/: README.md  house_sales_king_county.ipynb  pyproject.toml
site/: astro.config.mjs  package-lock.json  package.json
src/: __init__.py  data_generator.py
subscription_economics/: README.md  pyproject.toml
subscription_economics/data/: README.md  telemetry_logs_202303.csv
subscription_economics/notebooks/: 01_Cohort_Retention_and_LTV.ipynb  02_Churn_Prediction_Telemetry.ipynb  03_AB_Testing_Onboarding.ipynb
subscription_economics/src/: data_generator.py
subscription_economics/tests/: conftest.py
(+251 files in other folders)
