[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legislative-data-pipeline"
version = "0.1.0"
description = "End-to-end data pipeline for Mexican legislative data: capture, warehouse, transform, visualize."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mario Casanova" },
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "prefect>=3.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
]
snowflake = [
    "snowflake-connector-python>=3.10",
    "snowflake-sqlalchemy>=1.6",
]
dbt = [
    "dbt-duckdb>=1.8",
]

[project.scripts]
leg-capture = "capture.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["capture", "loaders", "models"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
