[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-economics"
version = "0.1.0"
description = "Subscription analytics: cohort retention, LTV, churn prediction from telemetry, and onboarding A/B tests."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mario Casanova" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "lifelines>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
notebooks = ["jupyter>=1.0", "ipykernel>=6.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["unit: fast isolated tests", "integration: tests with I/O"]
